--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,7 @@ org.gradle.jvmargs=-Xmx2048m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+
+bintrayRepo=maven
+siteUrl=https://github.com/ShuangtaoJia/ComponentInitializer
+gitUrl=https://github.com/ShuangtaoJia/ComponentInitializer.git
