--- a/build.gradle
+++ b/build.gradle
@@ -6,15 +6,18 @@ buildscript {
     repositories {
         google()
         jcenter()
-        maven {
-            url uri('/Users/JST/repo')
-        }
+        //调试时可以使用本地maven
+//        maven {
+//            url uri('/Users/JST/repo')
+//        }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0"
+        classpath "com.android.tools.build:gradle:4.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.jst.componentinitializer:componentinitializer:1.0.0-SNAPSHOT"
-//        implementation project(':component-initializer-gradle-plugin')
+
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.5'
+
+        classpath "com.jst.componentinitializer:gradle-plugin:1.0.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
