--- a/demo/module2/build.gradle
+++ b/demo/module2/build.gradle
@@ -22,8 +22,12 @@ android {
 }
 
 dependencies {
-    //todo 修改成 maven资源
-    implementation project(':component-initializer-api')
-    annotationProcessor project(':component-initializer-compiler')
+    implementation 'com.jst.componentinitializer:componentinitializer:1.0.0'
+    //调试时可以使用源码依赖
+//    implementation project(':component-initializer-api')
+
+    annotationProcessor 'com.jst.componentinitializer:compiler:1.0.0'
+    //调试时可以使用源码依赖
+//    annotationProcessor project(':component-initializer-compiler')
 
 }
