1.更新了gradle-plugin的版本到1.0.1，升级了ASM版本，解决使用kotlin时会报"This feature requires ASM6"的问题 2.为了解决上面的问题 对于auto-register的依赖改为了源码依赖 3.考虑到现在用kotlin的比较多，将demo的代码改为了kotlin代码

--- a/demo/module1/build.gradle
+++ b/demo/module1/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 30
@@ -26,8 +29,11 @@ dependencies {
     //调试时可以使用源码依赖
 //    implementation project(':component-initializer-api')
 
-    annotationProcessor 'com.jst.componentinitializer:compiler:1.0.0'
+    implementation "androidx.core:core-ktx:1.3.2"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+
+    kapt 'com.jst.componentinitializer:compiler:1.0.0'
     //调试时可以使用源码依赖
-//    annotationProcessor project(':component-initializer-compiler')
+//    kapt project(':component-initializer-compiler')
 
 }
